[package]
name = "pencil"
version = "0.1.0-dev"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]
repository = "https://github.com/iiYese/pencil"
description = "A simple but effective tool for writing (GUI in bevy)"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
