[package]
name = "pencil_case"
version = "0.1.0-dev"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]
repository = "https://github.com/iiYese/pencil_case"
description = "A simple but effective library for writing GUI in bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
